# appbunch

./: .gitignore  Makefile.am  README  autogen.sh  build-all.sh  configure.ac  mokosuite2_git.bb  mokosuite2_svn.bb  run-home-qvga.sh  run-home.sh  run-messages.sh  run-panel-android.sh  run-panel-qvga.sh  run-panel.sh  run-phone-qvga.sh  run-phone.sh  run-settings-android.sh  run-settings.sh  run-test.sh  transfer-all.sh
data/: Makefile.am  mokosettings.desktop
data/themes/: Makefile.am
data/themes/android/: Makefile.am  home.edc  idle.edc  panel.edc  phone.edc  theme.edc
data/themes/gry/: Makefile.am  home.edc  idle.edc  messages.edc  panel.edc  phone.edc  theme.edc.in
libmokosuite/: Makefile.am  application.c  application.h  bluetooth-agent.c  bluetooth-agent.h  bluetooth-client.c  bluetooth-client.h  bluetooth-dbus.xml  build-arm.sh  cfg.c  cfg.h  contactsdb.c  fso.c  fso.h  gui.c  gui.h  libmokosuite.pc.in  misc.c  misc.h  mokoinwin.c  mokolist.c  mokosuite.h  mokowin.c  notifications.c  notifications.h  notifications.xml  settings-service.c  settings-service.h  settings.c  settings.h  transfer-neo.sh
mokohome/: Makefile.am  build-arm.sh  desktop.c  desktop.h  input.c  input.h  launchers.c  launchers.h  main.c  transfer-neo.sh  widgets.c
mokomail/: Makefile.am  main.c
mokomessages/: Makefile.am  main.c  messagesdb.c  mokomessages.h  msglist.c  threadwin.c  threadwin.h
mokopanel/: Makefile.am  battery.c  build-arm.sh  clock.c  gsm.c  gsm.h  idle.c  main.c  notifications-misc.c  notifications-service.vala  notifications-win.c  notifications-win.h  panel.c  panel.h  prepare-env.sh  shutdown.c  transfer-neo.sh
mokophone/: Makefile.am  build-arm.sh  callblock.c  callblock.h  callsdb.c  callsdb.h  callwin.c  callwin.h  contactsview.c  contactsview.h  gsm.c  gsm.h  logentry.c  logentry.h  logview.c  logview.h  main.c  mokophone-dbus.xml  mokophone.c  mokophone.h  phone-activate.sh  phonewin.c  phonewin.h  simauthwin.c  simauthwin.h  sound.c  sound.h  transfer-neo.sh
mokosettings/: Makefile.am  build-arm.sh  main.c  menu-bluetooth.c  menu-bluetooth.h  menu-common.c  menu-common.h  menu-display.c  menu-display.h  menu-main.c  menu-main.h  menu-network.c  menu-network.h  menu-sounds.c  menu-sounds.h  mokosettings.h  transfer-neo.sh
mokowm/: Makefile.am  build-arm.sh  input.c  transfer-neo.sh  wm.c
po/: POTFILES.in
tests/: Makefile.am  theme_buttons.c
vapi/: panel.vapi
