SUBDIRS = libmokosuite mokophone mokomessages mokomail mokosettings mokopanel mokohome mokowm tests data po

MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub \
                       configure depcomp install-sh  \
                       Makefile.in missing ltmain.sh \
                       mkinstalldirs config.h.in config.h.in~ INSTALL

#MAINTAINERCLEANDIRS = m4
